--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div><h1>Bibliografias utilizadas</h1></div>
 
-
-    
+<div><a href="imagenes.html">Imagenes utilizadas</a></div>
+<div></div>
+<div><a href="biografias.html">Biografias de personajes importantes</a></div>
+<div></div>
+<div><a href="informacion.html">informacion en general de el socialismo/comunismo</a></div>
 </body>
 </html>
