--- a/biografias.html
+++ b/biografias.html
@@ -1,3 +1,9 @@
-<div><a href="https://historia.nationalgeographic.com.es/a/karl-marx-rebelde-a-revolucionario_12608">karl-marx-rebelde-a-revolucionario</a></div>
-<div><a href="https://www.cndh.org.mx/noticia/vladimir-lenin-lider-comunista-y-fundador-de-la-union-sovietica">vladimir-lenin-lider-comunista-y-fundador-de-la-union-sovietica</a></div>
+<div><a href="https://historia.nationalgeographic.com.es/a/karl-marx-rebelde-a-revolucionario_12608">karl-Marx-rebelde-a-revolucionario</a></div>
+<div><a href="https://www.cndh.org.mx/noticia/vladimir-lenin-lider-comunista-y-fundador-de-la-union-sovietica">Vladimir-lenin-lider-comunista-y-fundador-de-la-union-sovietica</a></div>
+<div><a href="https://www.biografiasyvidas.com/biografia/s/saint__simon_conde.htm">Saint-Simon</a></div>
+<div><a href="https://es.m.wikipedia.org/wiki/Henri_de_Saint-Simon">Saint-Simon</a></div>
+<div><a href="https://www.biografiasyvidas.com/biografia/o/owen.htm">Owen</a></div>
+<div><a href="https://historiahoy.com.ar/el-socialismo-utopico-robert-owen-n3739">Owen</a></div>
+<div><a href="https://economipedia.com/definiciones/comunismo.html">Definicion de comunismo</a></div>
+<div><a href="https://es.m.wikipedia.org/wiki/Socialismo#:~:text=La%20meta%20del%20socialismo%20es,por%20ejemplo%20el%20seguro%20social">socialismo tema</a></div>
 <div><a href=""></a></div>
