--- a/informacion.html
+++ b/informacion.html
@@ -10,7 +10,7 @@
     <div><a href="https://www.youtube.com/watch?v=Pk2OAyqTnQU">Principios del comunismo</a></div>
     <div><a href="https://www.youtube.com/watch?v=yn-R30kaHAs">Explicacion de las diferencias del socialismo y comunismo</a></div>
     <div><a href="https://es.m.wikipedia.org/wiki/Socialismo">principios y conceptos</a></div>
-    <div><a href="https://books.google.es/books?hl=es&lr=&id=sGnbl858ISwC&oi=fnd&pg=PA5&dq=socialismo+&ots=HkCmN1zi-1&sig=dxuL7yUt4uURx3EoTKPlU1dIB5s#v=onepage&q=socialismo&f=false"></a></div>
+    <div><a href="https://books.google.es/books?hl=es&lr=&id=sGnbl858ISwC&oi=fnd&pg=PA5&dq=socialismo+&ots=HkCmN1zi-1&sig=dxuL7yUt4uURx3EoTKPlU1dIB5s#v=onepage&q=socialismo&f=false">Principios y Conceptos</a></div>
     <div><a href="https://www.scribd.com/doc/61097079/PRINCIPIOS-BASICOS-DEL-SOCIALISMO"></a>Principios y conceptos</div>
     <div><a href="https://www.pauta.cl/internacional/los-30-anos-del-fin-de-la-union-sovietica-causas#:~:text=El%2025%20de%20diciembre%20de,superpotencia%20comunista%20dejaba%20de%20existir">FIn Del comunismo</a></div>
     <div><a href="https://books.google.es/books?hl=es&lr=&id=HCfYDwAAQBAJ&oi=fnd&pg=PT3&dq=final+union+sovietica&ots=pvo9w9g0kO&sig=mpm9mBiYnxCbY7yc7wmv4w_5c5w#v=onepage&q=final%20union%20sovietica&f=false">FIn Del comunismo</a></div>
