--- a/informacion.html
+++ b/informacion.html
@@ -15,6 +15,8 @@
     <div><a href="https://www.pauta.cl/internacional/los-30-anos-del-fin-de-la-union-sovietica-causas#:~:text=El%2025%20de%20diciembre%20de,superpotencia%20comunista%20dejaba%20de%20existir">FIn Del comunismo</a></div>
     <div><a href="https://books.google.es/books?hl=es&lr=&id=HCfYDwAAQBAJ&oi=fnd&pg=PT3&dq=final+union+sovietica&ots=pvo9w9g0kO&sig=mpm9mBiYnxCbY7yc7wmv4w_5c5w#v=onepage&q=final%20union%20sovietica&f=false">FIn Del comunismo</a></div>
     <div><a href="https://youtu.be/KovLyrI2sSo">FIn Del comunismo</a></div>
+    <div><a href="https://economipedia.com/definiciones/comunismo.html">Definicion de comunismo</a></div>
+    <div><a href="https://es.m.wikipedia.org/wiki/Socialismo#:~:text=La%20meta%20del%20socialismo%20es,por%20ejemplo%20el%20seguro%20social">socialismo tema</a></div>
 
 
 </body>
